Alterando o nome e imagem dos filmes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="The Batman (2022)"/>
           </div>
           <div class="movie-text">
             <h4>Batman (2022)</h4>
@@ -42,21 +42,21 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Após dois anos espreitando as ruas como Batman, Bruce Wayne se encontra nas profundezas mais sombrias de Gotham City. Com poucos aliados confiáveis, o vigilante solitário se estabelece como a personificação da vingança para a população.</span>
         </div>
       </div>
 
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://br.web.img2.acsta.net/medias/nmedia/18/97/04/22/20504502.jpg" alt="Sherek 2"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Sherek 2</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
-                <span>9.2</span>
+                <span>9.7</span>
               </div>
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
@@ -66,21 +66,21 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Shrek e Fiona acabaram de voltar da lua de mel e vivem felizes em sua casa no pântano. O casal recebe um convite dos pais da princesa, que querem conhecer o novo genro, para um jantar no castelo. Eles ficaram sabendo que Fiona havia se casado com o seu verdadeiro amor, mas o que eles ainda não sabem é que este amor é um ogro mal-educado de mais de 300 quilos, que conta com um burro falante como melhor amigo.</span>
         </div>
       </div>
 
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://hbomax-images.warnermediacdn.com/images/GXdu2ZAb9oJuAuwEAADa9/tileburnedin?size=1280x720&partner=hbomaxcom&v=5b2113081472d415b2e169c66300175b&host=art-gallery.api.hbo.com&language=pt-br&w=1280" alt="Scooby-doo: ilha do espanto"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Scooby-doo: ilha do espanto</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
-                <span>9.2</span>
+                <span>10</span>
               </div>
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply Lar dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Scooby acompanha os detetives da turma da Mistério S/A – Salsicha (Matthew Lillard), Fred (Freddie Prinze Jr.), Daphne (Sarah Michelle Gellar) e Velma (Linda Cardellini) – enquanto eles investigam uma série de acontecimentos sobrenaturais na Ilha do Espanto, o lugar mais descolado para as Férias de Primavera, cujo dono é Emile Mondavarious (Rowan Atkinson). Antes que os segredos sobrenaturais espantem todos os universitários, a turma deve desvendar o caso, salvar a si mesmos e, possivelmente, o mundo! Ô diabo! Fique com medo. Fique com um pouco de medo.</span>
         </div>
       </div>
     </div>
