--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div class="movie-description">
           <span>Após dois anos espreitando as ruas como Batman, Bruce Wayne se encontra nas profundezas mais sombrias de Gotham City. Com poucos aliados confiáveis, o vigilante solitário se estabelece como a personificação da vingança para a população.</span>
         </div>
+      </div>
 
       <div class="movie">
         <div class="movie-informations">
